discussion/kv_engine/176460/176460_rev11_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-52264: Separate setMaxDataSize() into components

We'll re-use many of these components in the BucketQuotaChangeTask
in future patches. setMaxDataSize() will remain as-is for the sake
of initial quota setting and unit tests that don't work nicely with
an extra task.

Change-Id: Ie0e229f60ec949df0027094e90996876e318f62e

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Ben Huddleston
Date: 2022-06-30 09:27:59.000000000
Message: 
Uploaded patch set 11: Patch Set 10 was rebased.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-06-30 10:03:24.000000000
Message: 
Patch Set 11: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/47209/ : FAILURE

Compile error at C:/Jenkins/workspace/kv_engine-windows-master/kv_engine/engines/ep/src/ep_engine.cc(837): error C2039: "setBucketQuotaChangeTaskWaitTime": is not a member of "Configuration" ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/47209/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18442/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/ep_engine.cc:837:27: error: no member named "setBucketQuotaChangeTaskWaitTime" in "Configuration" [clang-diagnostic-error]
            configuration.setBucketQuotaChangeTaskWaitTime(std::stoul(val));
                          ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18442/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/ep_engine.cc:837:27:
error: no member named "setBucketQuotaChangeTaskWaitTime" in "Configuration" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18442/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/39658/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/ep_engine.cc:837:27:
error: no member named "setBucketQuotaChangeTaskWaitTime" in "Configuration"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/39658/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/8214/ : FAILURE

Compile error at [2022-06-30T09:45:30.521Z] /home/couchbase/jenkins/workspace/kv_engine.aarch64-linux_master/kv_engine/engines/ep/src/ep_engine.cc:837:27:
error: ?class Configuration? has no member named ?setBucketQuotaChangeTaskWaitTime?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/8214/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/8115/ : FAILURE

Compile error at [2022-06-30T09:41:30.971Z] /home/couchbase/jenkins/workspace/kv_engine.libFuzzer_master/kv_engine/engines/ep/src/ep_engine.cc:837:27:
error: no member named "setBucketQuotaChangeTaskWaitTime" in "Configuration"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/8115/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/20327/ : FAILURE

Compile error at [2022-06-30T09:56:15.272Z] /home/couchbase/jenkins/workspace/kv_engine.linux-CE_master/kv_engine/engines/ep/src/ep_engine.cc:837:27:
error: ?class Configuration? has no member named ?setBucketQuotaChangeTaskWaitTime?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/20327/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/19547/ : FAILURE

Compile error at [2022-06-30T09:32:59.144Z] /Users/couchbase/workspace/workspace/kv_engine.macos_master/kv_engine/engines/ep/src/ep_engine.cc:837:27:
error: no member named "setBucketQuotaChangeTaskWaitTime" in "Configuration"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/19547/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/20672/ : FAILURE

Compile error at [2022-06-30T09:50:17.342Z] /home/couchbase/jenkins/workspace/kv_engine.linux_master/kv_engine/engines/ep/src/ep_engine.cc:837:27:
error: ?class Configuration? has no member named ?setBucketQuotaChangeTaskWaitTime?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/20672/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/21313/ : FAILURE

Compile error at [2022-06-30T09:59:47.038Z] /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_master/kv_engine/engines/ep/src/ep_engine.cc:837:27:
error: no member named "setBucketQuotaChangeTaskWaitTime" in "Configuration"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/21313/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/28705/ : FAILURE

Compile error at [2022-06-30T10:02:30.021Z] /home/couchbase/jenkins/workspace/kv_engine.ASan-UBSan_master/kv_engine/engines/ep/src/ep_engine.cc:837:27:
error: no member named "setBucketQuotaChangeTaskWaitTime" in "Configuration"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/28705/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/17594/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
